distribution/araneae-dashboard/araneae-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: araneae-gateway
  namespace: araneae
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - <<__subdomain_araneae_dashboard__>>.araneae.io
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
      httpsRedirect: true
  - hosts:
    - <<__subdomain_araneae_dashboard__>>.araneae.io
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: araneae-ingressgateway-certs
